wrapping fixed

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 @import url("https://fonts.cdnfonts.com/css/general-sans");
+@import url('https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css');
+
 
 @tailwind base;
 @tailwind components;
@@ -12,7 +14,7 @@ body {
   width: 100dvw;
   overflow-x: hidden;
   background-color: #dfdff0;
-  font-family: "General Sans", sans-serif;
+  font-family: 'Pretendard', "General Sans", sans-serif;
 }
 
 /* marquee */
@@ -107,8 +109,8 @@ body {
   }
 
   .about-subtext {
-    @apply w-full max-w-96 text-center font-circular-web text-xl md:max-w-[34rem] mt-8;
-    text-wrap: balance;
+    @apply w-full max-w-screen-lg text-center font-pretendard text-xl md:max-w-2xl mt-8;
+    text-wrap: pretty;
   }
 
   .about-image {
